Search for the config dir in more places
Implement several different ways to tell clicraft which directory
it should use for its configuration. In order of precedence,
clicraft now searches the following places for its configs:

* The argument to the --config option
* The $CLICRAFT_CONFIG environment variable
* $XDG_CONFIG_HOME/foo, where 'foo' is how clicraft was invoked
* $XDG_CONFIG_HOME/clicraft
* $sysconfdir/clicraft

This adds a few other things along the way as well, including a
bootstrap.sh file for functions needed before functions.sh is read,
and proper options parsing.

--- a/src/Makefile.inc
+++ b/src/Makefile.inc
@@ -1,5 +1,5 @@
 SRC_BINFILES  := src/bin/clicraft
-SRC_EXECFILES := src/lib/functions.sh src/lib/defaults.sh src/lib/validate.sh \
+SRC_EXECFILES := src/lib/bootstrap.sh src/lib/functions.sh src/lib/defaults.sh src/lib/validate.sh \
                  src/lib/tmux.sh src/lib/screen.sh \
                  $(wildcard src/lib/action.d/*.sh)
 SRC_CONFFILES := src/etc/clicraft-defaults.conf \
