Don't use backticks for quoting

--- a/src/etc/action.d/action-override.sh.example
+++ b/src/etc/action.d/action-override.sh.example
@@ -5,7 +5,7 @@
 #
 # Usage: clicraft $ACTION
 #
-#    Overrides the default `clicraft $ACTION' with custom functionality.
+#    Overrides the default 'clicraft $ACTION' with custom functionality.
 #
 
 # TODO: stuff before system "$ACTION" action script
