--- a/src/etc/action.d/prune.sh.example
+++ b/src/etc/action.d/prune.sh.example
@@ -12,9 +12,9 @@ dim="${1-overworld}"
 
 MMAT_JAR="${MMAT_JAR-$SERVER_DIR/mmat.jar}"
 PRUNE_RADIUS="${PRUNE_RADIUS-15}"
-OVERWORLD_WHITELIST="${OVERWORLD_WHITELIST-$CONFDIR/overworld-blocks.conf}"
-NETHER_WHITELIST="${NETHER_WHITELIST-$CONFDIR/nether-blocks.conf}"
-END_WHITELIST="${END_WHITELIST-$CONFDIR/end-blocks.conf}"
+OVERWORLD_WHITELIST="${OVERWORLD_WHITELIST-$CLICRAFT_CONFIG/overworld-blocks.conf}"
+NETHER_WHITELIST="${NETHER_WHITELIST-$CLICRAFT_CONFIG/nether-blocks.conf}"
+END_WHITELIST="${END_WHITELIST-$CLICRAFT_CONFIG/end-blocks.conf}"
 
 mmat() {
 	java -jar "$MMAT_JAR" "$@"
