Remove useless directory check in bash completion
This check was preventing the one within it. We check that
CLICRAFT_CONFIG exists and is a non-empty directory further down,
so remove this check entirely.

--- a/scripts/bash_completion.in
+++ b/scripts/bash_completion.in
@@ -27,7 +27,7 @@ _clicraft() {
 	. "$EXECDIR/bootstrap.sh"
 
 	# find correct config to use
-	if [[ -n "$CLICRAFT_CONFIG" && -d "$CLICRAFT_CONFIG" ]]; then
+	if [[ -n "$CLICRAFT_CONFIG" ]]; then
 		if [[ -d "${XDG_CONFIG_HOME-$HOME/.config}/$CLICRAFT_CONFIG" ]]; then
 			CLICRAFT_CONFIG="${XDG_CONFIG_HOME-$HOME/.config}/$CLICRAFT_CONFIG"
 		fi
