--- a/Makefile.in
+++ b/Makefile.in
@@ -47,6 +47,7 @@ VERSION   = @VERSION@
 BUGREPORT = @BUGREPORT@
 URL       = @URL@
 
+BINDIR     = @BINDIR@
 CONFDIR    = @CONFDIR@
 EXECDIR    = @EXECDIR@
 SERVER_DIR = @DEFAULT_SERVER_DIR@
