Fix bug in `clicraft backup`
Properly set the default for BACKUP_TARGETS.

--- a/src/etc/action.d/backup.sh.example
+++ b/src/etc/action.d/backup.sh.example
@@ -15,7 +15,7 @@
 WORLD="$(serverprop 'level-name')" || return 1
 BACKUP_DIR="${BACKUP_DIR-"$SERVER_DIR/backups"}"
 BACKUP_FILE="${BACKUP_FILE-"$BACKUP_DIR/$WORLD-$(date +%Y%m%d-%H%M%S).zip"}"
-BACKUP_TARGETS="${BACKUP_TARGETS-"$WORLD $WORLD_*"}"
+BACKUP_TARGETS="${BACKUP_TARGETS-"$WORLD ${WORLD}_*"}"
 BACKUP_COMMAND="${BACKUP_COMMAND-"zip -r $BACKUP_FILE $BACKUP_TARGETS"}"
 BACKUP_LIMIT="${BACKUP_LIMIT-7}"
 
