Make clicraft compatible with autoconf 2.59
AC_PROG_SED was introduced in 2.60.

--- a/Makefile.in
+++ b/Makefile.in
@@ -36,7 +36,7 @@ man9dir       = $(mandir)/man9
 manext        = .1
 srcdir        = @srcdir@
 
-SED             = @SED@
+SED             = /bin/sed
 INSTALL         = @INSTALL@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_DATA    = @INSTALL_DATA@
