--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ clicraft_[0-9]*.deb
 clicraft_[0-9]*.tar.gz
 clicraft_[0-9]*.dsc
 clicraft_[0-9]*.changes
+dist/rpmbuild
 dist/arch/[0-9].[0-9].[0-9]
 dist/arch/[0-9].[0-9].[0-9][0-9]
 dist/arch/clicraft-*.pkg.tar.xz
