--- a/configure.ac
+++ b/configure.ac
@@ -37,6 +37,7 @@ AC_PROG_INSTALL
 
 AC_CONFIG_FILES([
 Makefile
+dist/rhel/clicraft.spec
 src/bin/clicraft
 src/lib/defaults.sh
 src/etc/clicraft-defaults.conf
